redis_node/kubernetes/node-redis-deployment-with-limited-ressources.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-redis
  labels:
    app: node-redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-redis
  template:
    metadata:
      labels:
        app: node-redis
    spec:
      containers:
        - name: node-redis
          imagePullPolicy: Always
          image: baali35000/redis-node-app
          resources:
            requests:
              memory: "2Gi"
              cpu: 1
            limits:
              memory: "2Gi"
              cpu: 1
          ports:
            - containerPort: 8080
