redis_node/kubernetes/node-redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: node-redis-service
spec:
  selector:
    app: node-redis
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
