redis_node/kubernetes/node-redis-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-redis-ingress

spec:
  rules:
    - host: node-redis.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service: 
                name: node-redis-service
                port:
                  number: 8080
